--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -62,8 +62,7 @@
         <em>If you are a returning player, feel free to queue up for a game. Otherwise, we reccommend taking a look at
           the rule section located below first. Enjoy!</em>
       </h3>
-      <input id="join-game" type="button" onclick="" style="cursor: pointer" class="btn btn-primary btn-xl" href="/game"
-        type="submit" value="Join Game" />
+      <button id="join-game" style="cursor: pointer" class="btn btn-primary btn-xl">Join Game</button>
       <br>
       <button type="button" class="btn btn-primary" id="reset-button" style="margin-top: 6px;">
         Flip the Table
